syntax = "proto3";

package draggle_net;

service DraggleNet {
  rpc Send (PingRequest) returns (PingResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}